--- a/view/sale_line_tree_sequence.xml
+++ b/view/sale_line_tree_sequence.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name='description']" position="after">
+    <xpath expr="/tree/field[@name='product']" position="after">
       <field name="available_quantity"/>
       <field name="forecast_quantity"/>
     </xpath>
