Improve code, for a better test. Sepoparet the new purhcase date field, to be used only if purchase and stock modules are installed.
Task: #174898

--- a/view/sale_line_date_tree_sequence.xml
+++ b/view/sale_line_date_tree_sequence.xml
@@ -2,8 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name='product']" position="after">
-      <field name="available_quantity" optional="0"/>
-      <field name="forecast_quantity" optional="0"/>
+    <xpath expr="/tree/field[@name='forecast_quantity']" position="after">
+      <field name="in_planned_date" optional="0"/>
     </xpath>
 </data>
